fixed sidebar gap

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,18 +14,19 @@
 }
 
 #wrapper.toggled {
-    padding-left: 250px;
+    padding-left: 200px;
 }
 
 #sidebar-wrapper {
     z-index: 1000;
     position: fixed;
-    left: 250px;
-    width: 0;
+    left: 200px;
+    width: 10px;
     height: 100%;
-    margin-left: -250px;
+    margin-top: 0px;
+    margin-left: -200px;
     overflow-y: auto;
-    background: #000;
+    background: #222222;
     -webkit-transition: all 0.5s ease;
     -moz-transition: all 0.5s ease;
     -o-transition: all 0.5s ease;
@@ -33,18 +34,19 @@
 }
 
 #wrapper.toggled #sidebar-wrapper {
-    width: 250px;
+    width: 200px;
 }
 
 #page-content-wrapper {
     width: 100%;
     position: absolute;
     padding: 15px;
+    margin-top: 50px;
 }
 
 #wrapper.toggled #page-content-wrapper {
-    position: absolute;
-    margin-right: -250px;
+    position: fixed;
+    margin-right: -200px;
 }
 
 /* Sidebar Styles */
@@ -52,15 +54,17 @@
 .sidebar-nav {
     position: absolute;
     top: 0;
-    width: 250px;
+    width: 200px;
     margin: 0;
     padding: 0;
+    padding-top: 10px;
     list-style: none;
 }
 
 .sidebar-nav li {
     text-indent: 20px;
     line-height: 40px;
+    color: #999999;
 }
 
 .sidebar-nav li a {
@@ -97,7 +101,7 @@
 
 @media(min-width:768px) {
     #wrapper {
-        padding-left: 250px;
+        padding-left: 200px;
     }
 
     #wrapper.toggled {
@@ -105,7 +109,7 @@
     }
 
     #sidebar-wrapper {
-        width: 250px;
+        width: 200px;
     }
 
     #wrapper.toggled #sidebar-wrapper {
